src/test/ui/impl-trait/static-return-lifetime-infered.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/static-return-lifetime-infered.rs:7:16
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                         -----     ----------------------- ...is required to be `'static` by this...
   |                         |
   |                         this data with the anonymous lifetime `'_`...
LL |         self.x.iter().map(|a| a.0)
   |         ------ ^^^^
   |         |
   |         ...and is captured here
   |
help: to permit non-static references in an `impl Trait` value, you can add an explicit bound for the anonymous lifetime `'_`
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> + '_ {
   |                                                           ^^^^

error: cannot infer an appropriate lifetime
  --> $DIR/static-return-lifetime-infered.rs:11:16
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                        --------     ----------------------- ...is required to be `'static` by this...
   |                        |
   |                        this data with lifetime `'a`...
LL |         self.x.iter().map(|a| a.0)
   |         ------ ^^^^
   |         |
   |         ...and is captured here
   |
help: to permit non-static references in an `impl Trait` value, you can add an explicit bound for lifetime `'a`
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> + 'a {
   |                                                             ^^^^

error: aborting due to 2 previous errors

